# smaker-web

./: .gitignore  alembic.ini  cli.py  main.py  pyproject.toml
.arts/: launch.json
migrations/: env.py
migrations/versions/: e99141ba7ce1_create_tables.py
smaker_web/: __init__.py
smaker_web/app/: __init__.py  database.py  models.py
smaker_web/app/article/: __init__.py  models.py  views.py
smaker_web/core/: __init__.py  config.py  database.py
